# Corso-di-Calcolo-Numerico

./: .gitignore  README.md
cnum_examples/: CMakeLists.txt
cnum_examples/01_fattorizzazione_LU/: LU.cpp  LU.h  Makefile  test1  test1.cpp  test2  test2.cpp
cnum_examples/02_interpolazione_di_Lagrange/: Makefile  poly.cpp  poly.h  test1  test1.cpp
cnum_examples/include/: cnum.h
cnum_examples/src/: cnum_Lagrange_interpolation.cpp  cnum_poly.cpp  cnum_zero_Halley.cpp  cnum_zero_Newton.cpp  cnum_zero_Newton_bisection.cpp  cnum_zero_Newton_for_nultiple_roots.cpp  cnum_zero_Steffensen.cpp  cnum_zero_bisection.cpp  cnum_zero_secant.cpp
cnum_examples/tests/: test_Lagrange.cpp  test_poly.cpp  test_zeroes.cpp  test_zeroes2.cpp  test_zeroes3.cpp
lezione_01/: assign_01.cpp  assign_02.cpp  code_01.cpp
lezione_01/materiale/: code_02.cpp  code_03.cpp  code_04.cpp  code_05.cpp
lezione_02/esercizi/: assign_01.cpp  assign_02.cpp
lezione_02/materiale/: code_01.cpp  code_02.cpp  code_03.cpp  code_04.cpp  code_05.cpp  code_06.cpp  code_07.cpp  code_08.cpp
lezione_03/esercizi/: assign_01.cpp  assign_02.cpp
lezione_03/materiale/: code_01.cpp  code_02.cpp  code_03.cpp  code_04.cpp  code_05.cpp  code_06.cpp
lezione_04/: code_01.cpp  code_02.cpp  code_03.cpp  code_04.cpp
lezione_05/: card.cpp  card.h  deck.cpp  deck.h  hand.cpp  hand.h  poker_game.cpp
lezione_06/: code_01.cpp  code_02.cpp  code_03.cpp  code_04.cpp  code_05.cpp  plot_01  plot_02
lezione_07/: code_01.cpp  code_02.cpp  code_03.cpp  code_04.cpp  pol_fit
lezione_08/: code.cpp  plot_obj
lezione_09/: lez.cpp  poly.cpp  poly.h
lezione_10/: p_anim  p_stat  trapezi.cpp
